fix spacing of laurate pop up

--- a/css/LaureatesPage.styl
+++ b/css/LaureatesPage.styl
@@ -199,38 +199,42 @@
 	margin-left 55%
 
 #laureatesRoot #nameDiv
-	height 10%
-	font-size 1.4em
+	height auto
+	font-size auto
+
 
 #laureatesRoot #prizeDiv
-	height 6%
-	top 10%
-	font-size .7em
-	padding-top 2%
+	height auto
+	//top 10%
+	font-size 63%
+	padding-top 3%
 
 #laureatesRoot #yearDiv
-	height 12%
-	top 20%
-	font-size .7em
+	height auto
+	//top 20%
+	font-size 63%
+	padding-top 1%
 
 #laureatesRoot #descriptionDiv
-	border 1px dashed white
 	height 45%
-	top 31%
+	//top 31%
+	font-size 63%
+	padding-top 4%
 
 #laureatesRoot #iconDiv
-	height 12%
-	bottom 1%
+	bottom 0%
+	margin-left 60%
+	position absolute
 
 #laureatesRoot #iconDivImg
 	width 23%
 	height 100%
-	position absolute
 
 #laureatesRoot .popupInfo
 	margin-left 60%
 	width 39%
-	position absolute
+	top auto
+	position relative
 
 
 //OTHER STUFF C+P FROM COLLECTIONS PAGE..
